Running with -XX:+UseParallelGC -XX:OldSize=30k crashes jvm

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b81

        Running with -XX:+UseParallelGC -XX:OldSize=30k crashes jvm (in release) or asserts (in debug) with the following assertion:

        assert(_initial_young_size <= bound_minus_alignment(_initial_young_size, _initial_heap_byte_size)) failed: Ergonomics made initial young generation larger than initial heap

              Assignee:
              David Lindholm (Inactive)
              Reporter:
              David Lindholm (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: