8133553: Running with -XX:+UseParallelGC -XX:OldSize=30k crashes jvm Reviewed-by: jwilhelm, sjohanss